# lensing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/raw/: README.md  galaxy_crop.fits
docs/: astrophysics.md  background.md  benchmarks.md  usage.md  validation.md
lensing/: __init__.py  _helpers.py  archive.py  benchmarks.py  config.py  cosmology.py  stats.py
lensing/bigdata/: __init__.py  dataset.py  generator.py
lensing/data/: __init__.py  grid.py  noise.py  simulate.py
lensing/inference/: __init__.py  ellipticity.py  losses.py  mcmc.py  optimize.py
lensing/lens/: __init__.py  binary.py  external_shear.py  microlens.py  nfw.py  nie.py  power_law.py  sie.py  timedelay.py
lensing/light/: __init__.py  (+3 more)
notebooks/: 01_microlensing_lightcurve.ipynb  02_sersic_fit.ipynb  03_core_sersic_fit.ipynb  04_double_sersic_fit.ipynb  05_weak_lensing_ellipticity.ipynb  06_strong_lensing_SIE.ipynb  07_real_galaxy_F150W.ipynb  08_binary_microlens.ipynb  09_galaxy_cluster_NFW.ipynb  10_CNN_lens_classifier.ipynb  11_DNN_param_regression.ipynb  12_unet_source_reconstruction.ipynb  13_cpu_vs_mps_benchmarks.ipynb  14_power_law_and_NIE_lenses.ipynb  15_time_delay_cosmography.ipynb  16_large_scale_lens_finder.ipynb  17_param_recovery_at_scale.ipynb  18_LLM_metadata_extraction.ipynb
scripts/: _make_notebooks.py  run_microlensing_fit.py  run_sersic_fit.py
tests/: conftest.py  test_advanced.py  test_advanced_lenses.py  test_bigdata_llm.py  test_light_models.py  test_microlens.py  test_sie.py  test_stats.py
(+12 files in other folders)
